--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.5.4",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.5.2",
+    "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-styled-components": "^5.5.0",
     "gatsby-source-filesystem": "^4.5.2",
