--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-styled-components": "^5.5.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-remark": "^5.11.1",
     "gatsby-transformer-sharp": "^4.5.0",
     "gbimage-bridge": "^0.2.1",
     "react": "^17.0.1",
