--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.1",
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.0.2",
+    "framer-motion": "^6.2.10",
     "gatsby": "^4.5.4",
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.5.2",
@@ -30,8 +32,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.34.0",
+    "react-scroll-motion": "^0.2.6",
     "react-transition-group": "^4.4.2",
-    "scrollreveal": "^4.0.9",
+    "scrollreveal": "^4.0.5",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
