--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fontsource/inter": "^4.5.1",
+    "@fontsource/inter": "^4.5.10",
     "aos": "^2.3.4",
-    "babel-plugin-styled-components": "^2.0.2",
-    "framer-motion": "^6.2.10",
-    "gatsby": "^4.5.4",
+    "babel-plugin-styled-components": "^2.0.7",
+    "framer-motion": "^6.3.3",
+    "gatsby": "^4.13.1",
     "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-image": "^2.5.2",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-sharp": "^4.5.2",
-    "gatsby-plugin-styled-components": "^5.5.0",
+    "gatsby-plugin-image": "^2.13.0",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^4.11.1",
-    "gatsby-transformer-remark": "^5.11.1",
-    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-remark": "^5.13.0",
+    "gatsby-transformer-sharp": "^4.13.0",
     "gbimage-bridge": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -36,12 +37,12 @@
     "react-scroll-motion": "^0.2.6",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.5",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "gatsby-plugin-postcss": "^5.5.0",
-    "prettier": "^2.5.1"
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.13.0",
+    "prettier": "^2.6.2"
   },
   "repository": {
     "type": "git",
