--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-styled-components": "^5.13.0",
