--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.10",
+    "@reduxjs/toolkit": "^1.8.1",
     "aos": "^2.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "framer-motion": "^6.3.3",
@@ -35,6 +36,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.34.0",
+    "react-redux": "^8.0.1",
     "react-scroll-motion": "^0.2.6",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.5",
