--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-transformer-sharp": "^4.13.0",
     "gbimage-bridge": "^0.2.1",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.34.0",
