--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "prepare": "husky install",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix ."
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.10",
@@ -49,14 +50,21 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.24",
     "@types/react-transition-group": "^4.4.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "gatsby-plugin-postcss": "^5.13.0",
+    "husky": "^8.0.3",
     "prettier": "^2.6.2"
   },
   "repository": {
@@ -65,5 +73,10 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": "please-use-npm",
+    "npm": ">=6.0.0"
   }
 }
