--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-scroll-motion": "^0.2.6",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.5",
+    "sharp": "^0.34.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4"
   },
